@startuml

title __DEMO's Class Diagram__\n


    namespace com.example.demo {
      class com.example.demo.HelloApplication {
          {static} + main()
          + start()
      }
    }

  


    namespace com.example.demo {
      class com.example.demo.HelloController {
          + LabelGo : Label
          + Ris1 : ImageView
          + Ris2 : ImageView
          + Ris3 : ImageView
          + moneyofAutomat : Label
          + moneyofPlayer : Label
          + statusLabel : Label
          + OnMouseClickImg()
          + addMoney()
          + initialize()
          + onEnd()
          + onGo()
          - UpdatingPointsOnScreen()
      }
    }

  

  com.example.demo.HelloApplication -up-|> javafx.application.Application
  com.example.demo.HelloController .up.|> javafx.fxml.Initializable
  com.example.demo.HelloController o-- model.Player : player1
  com.example.demo.HelloController o-- model.SlotMachine : slotMachine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
